--- a/_pandbfashion_styles.css
+++ b/_pandbfashion_styles.css
@@ -146,6 +146,11 @@ span.ui-state-highlight{
 .headerMidThird{
 	padding-top:40px;
 }
+.headerMidThird p{
+	float: left;
+    font-size: 30px;
+    width: 340px;
+}
 .homepageLink{
 	margin-left:100px;
 }
@@ -1357,6 +1362,11 @@ margin-left:20px;
     width: 90%;
 }
 
+.userInfo2 a{
+	float: left;
+    margin-left: 55px;
+    margin-top: 20px;
+}
 .userInfo2 input{
     margin-right: 12px;
 }
@@ -1407,15 +1417,12 @@ margin-left:20px;
 /**homepageBottomSec**/
 #homeProdSearchSale{
 	width:950px;
-	height:1025px;
 }
 #homeProdSearchBestSellers{
 	width:950px;
-	height:1025px;
 }
 #homeProdSearchDiscontinued{
 	width:950px;
-	height:1025px;
 }
 .carouselHPSearchCont{
 	margin-left:30px;
