Completed most of the category template overhaul

--- a/_pandbfashion_styles.css
+++ b/_pandbfashion_styles.css
@@ -1557,6 +1557,10 @@ div .catListingCat:hover{
 	text-align: center;
     width: 90%;
 }
+.loadingBG{
+	float:left;
+	width:100%;
+}
 /*************************************************************************************************************************/
 /**Search Categories**/
 
@@ -3560,3 +3564,9 @@ div.buttonList .removeButtonWishlist:hover{
 	margin-bottom: 20px !important;
     margin-left: 15px !important;
 }
+
+
+
+/*************************************************************************************************************************/
+/*************************************************************************************************************************/
+/**MISCELLANEOUS**/
