--- a/_pandbfashion_styles.css
+++ b/_pandbfashion_styles.css
@@ -187,6 +187,9 @@ span.ui-state-highlight{
 	float:left;
 	height:32px;
 	width:92px;
+	font-family: "Special Elite",cursive;
+	padding-top: 5px;
+	font-size: 18px;
 }
 /*************************************************************************************************************************/
 /**Bottom third**/
@@ -2039,13 +2042,16 @@ margin-bottom:0;
 }
 /*************************************************************************************************************************/
 /**Product Image section**/
+.prodImageContainer img{
+	border:solid 10px rgba(200, 200, 200, .2);
+}
 .imageContainer{
 	float: left;
     height: auto;
     margin-left: 0;
     margin-right: 30px;
     padding-right: 0;
-    width: 340px;
+    width: 470px;
 }
 .imageContainer2{
 	padding-right:0px;
@@ -2100,12 +2106,78 @@ div .socialLinks{
 
 .intShippingModal .ui-dialog-titlebar {display:none;}
 
+.prodViewerContainer{
+	float:left;
+}
+
+.prodlistRelatedContainer{
+	float:left;
+}
+
+/***********************************************************************************************************************************/
+/*****IMAGE CONTAINER****/
+.imageContainer{
+	float:left;
+	width:460px;
+	position:relative;
+}
+.imageContainer div img.prodBigImage{
+	border:solid 10px white;
+	box-shadow: 0 4px 5px 0 #E9E9E9;
+}
+.imageContainer div.prodThumbs{
+	float: left;
+    margin-left: 49px;
+    position: relative;
+}
+.imageContainer div.prodThumbs div{
+	float: left;
+    margin-right: 10px;
+    margin-top: 5px;
+}
+.imageContainer div.prodThumbs div img{
+	border:solid 5px white;
+	box-shadow: 0 0 7px 2px #e9e9e9;
+}
+.largeImageContainer{
+	height: 590px;
+    width: 480px;
+	overflow:visible;
+}
+.largeImageContainer:hover{
+	border:solid 10px rgba(200, 200, 200, .2);
+}
+.imageContainerBlocker{
+	width:470px;
+	background-color: rgba(900,900,900,.3);
+	position:absolute;
+	left:0;
+	top:0;
+	z-index:2;
+	display:none;
+}
+.imageContainerBlocker img{
+	margin-left: 230px;
+    margin-top: 240px;
+}
+.zoomImg{
+	z-index:1;
+}
+
+.prodThumbs p{
+	color: #726B5B;
+    left: 42px;
+    position: absolute;
+    top: -35px;
+	width: 350px;
+}
+
 /*************************************************************************************************************************/
 /**Product Summary Section**/
 
 .prodSummaryContainer{
 	float:left;
-	width: 75%;
+	width: 50%;
 	height:auto;
 	margin-right:0px;
 }
@@ -2128,10 +2200,12 @@ div .socialLinks{
 	font-family: 'Montserrat', sans-serif;
 	text-align:left;
 	line-height: 20px;
+	color: #ee3a77;
 }
 .prodSummaryContainer h5{
 	color:white;
 	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
 }
 .prodSummaryContainer div {
 	color:white;
@@ -2167,6 +2241,13 @@ div .socialLinks{
 	color:white;
 	font-family: 'Montserrat', sans-serif;
 	font-size:14px;
+}
+.prodManufacturer a{
+	color: #3fb8af;
+}
+.basePrice{
+}
+.basePrice span{
 }
 .prodMSRP{
 	 text-decoration: line-through;
@@ -2221,6 +2302,7 @@ div .socialLinks{
 
 .prodViewerAddToCartForm{
 	width:100%;
+	margin-bottom: 0.5em;
 }
 .prodViewerAddToCartForm fieldset{
 	width:100%;
@@ -2340,6 +2422,15 @@ div.priceContainer h4.displayInvAmount{
 	font-family: 'Special Elite', cursive;
 	color:#FF3D7F;
 	font-size: 19px;
+}
+.CRMButtonMenu{
+}
+.CRMButtonMenu a{
+	color:#3fb8af;
+}
+.tabbedProductContentTD{
+	float: left;
+    width: 50%;
 }
 
 /*************************************************************************************************************************/
